--- a/siienviosri/SiiEnvioSRI.vbproj
+++ b/siienviosri/SiiEnvioSRI.vbproj
@@ -117,6 +117,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="ProcesoOffLine\ProcesoSRIFacturacionOffLine.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Administracion.resx">
